# albucore

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ALBUCORE_OPTIMIZATIONS.md  Benchmark.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  MAINTAINERS.md  MATMUL_IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  array_operations_benchmark_results.json  benchmark.sh  lut_benchmark_results.csv  pyproject.toml  requirements-dev.txt  setup.py
.codex/skills/albucore-benchmarks/: SKILL.md
.codex/skills/albucore-conventions/: SKILL.md
.codex/skills/albucore-public-api/: SKILL.md
.codex/skills/performance-optimization/: SKILL.md
.cursor/rules/: custom.mdc  optimizations.mdc
.cursor/skills/albucore-benchmarks/: SKILL.md
.cursor/skills/albucore-conventions/: SKILL.md
.cursor/skills/albucore-public-api/: SKILL.md
.github/workflows/: benchmark-pr.yml  ci.yml  cla-status.yml  legal-integrity.yml  performance.yml  publish.yml  release-candidate.yml  security.yml  upload_to_pypi.yml
.well-known/: funding-manifest-urls
albucore/: __init__.py  arithmetic.py  convert.py  decorators.py  functions.py  geometric.py  lut.py  normalize.py  ops_misc.py  stats.py  utils.py  weighted.py
benchmark/: README.md  benchmark.py  benchmark_lut.py  requirements.in  requirements.txt  utils.py
benchmark/albucore_benchmark/: README.md  benchmark.py
benchmark/results/: float32_1.md  float32_3.md  float32_5.md  uint8_1.md  uint8_3.md  uint8_5.md
benchmark/results/float32_1/: FromFloat.md  HorizontalFlip.md  VerticalFlip.md
benchmark/results/float32_3/: FromFloat.md  HorizontalFlip.md  VerticalFlip.md
benchmark/results/float32_5/: HorizontalFlip.md  ToFloat.md  VerticalFlip.md
benchmark/results/uint8_1/: AddArray.md  AddConstant.md  AddVector.md  AddWeighted.md  HorizontalFlip.md  MultiplyAdd.md  MultiplyArray.md  MultiplyConstant.md  MultiplyVector.md  Normalize.md  NormalizeMinMax.md  NormalizeMinMaxPerChannel.md  NormalizePerImage.md  NormalizePerImagePerChannel.md  PowerConstant.md  ToFloat.md  VerticalFlip.md
benchmark/stringzilla_vs_cv2_lut/: README.md  benchmark_add_weighted.py  benchmark_lut.py
benchmark/vs_cv2/: benchmark_multiply_array.py  benchmark_simsimd.py
benchmarks/: README.md  benchmark_add_constant_uint8_channels.py  benchmark_cv2_lut_vs_sz_lut_minimal.py  benchmark_grayscale_paths.py  benchmark_lut_shared_routing.py  benchmark_minmax_ravel.py  benchmark_multiply_add_numkong.py  benchmark_normalize_numkong_patterns.py  benchmark_numkong.py  benchmark_numkong_vs_albucore_backends.py  benchmark_reduce_sum.py  benchmark_router_synthetic.py  benchmark_scale_vs_lut.py  benchmark_stats.py  benchmark_sum_mean_std_ravel.py  benchmark_sz_lut_vs_cv2_lut.py  compare_router_json.py  issue_lut_uint8_standalone.py  run_router_compare_0_0_41.sh  shape_grids.py  timing.py
benchmarks/probes/: opencv_behavior_probe.py
benchmarks/results/: .gitignore  ISSUE_cv2_lut_vs_stringzilla_uint8.md  ISSUE_opencv_vs_stringzilla_lut_COMPLETE.md  README.md  REPORT_A_vs_B_same_code.md  REPORT_RELIABLE_SUITE_20260321.md  REPORT_current_vs_0041.md  REPORT_lut_backends_21dc16e.md  REPORT_lut_production_paths_21dc16e.md  REPORT_lut_shared_routing_21dc16e.md  REPORT_post_sz_lut_opt.md  REPORT_reliable_run2_vs_run1.md  REPORT_reliable_vs_current.md  REPORT_router_0.0.41_vs_current.md  REPORT_router_compare.md  REPORT_router_current_vs_main_21dc16e.md  REPORT_verify_vs_current.md  bench_lut_shared_routing_reliable.md  bench_sz_lut_vs_cv2_reliable.md  reliable_benchmark_add_constant_uint8_channels.md  reliable_benchmark_grayscale_paths.md  reliable_benchmark_minmax_ravel.md  reliable_benchmark_multiply_add_numkong.md  reliable_benchmark_normalize_numkong_patterns.md  reliable_benchmark_numkong.md  reliable_benchmark_numkong_vs_albucore_backends.md  reliable_benchmark_stats.md  reliable_benchmark_sum_mean_std_ravel.md  router_run_latest.json  router_synthetic_0.0.40.json  router_synthetic_0.0.41.json  router_synthetic_0.0.41_post_fix_baseline.json  router_synthetic_0.0.41_skip_stats_lut.json  router_synthetic_CURRENT_main.json  router_synthetic_CURRENT_post_fix.json  router_synthetic_VERIFY_20260322.json  router_synthetic_VERIFY_b.json  router_synthetic_current.json  router_synthetic_reliable.json  router_synthetic_reliable_run2.json  (+3 more)
docs/: decorators.md  image-conventions.md  numkong-performance.md  performance-optimization.md  performance-regressions-plan.md  public-api.md
docs/maintaining/: core-correctness-contracts.md  license-provenance.md  opencv-5-routing-plan.md  operational-continuity.md  performance-policy.md  pr-and-publishing-architecture.md  release-process.md  release-summary-template.md  release-verification.md  support-policy.md
docs/research/: README.md  minmax-ravel-benchmark.md  sum-mean-std-ravel-benchmark.md
tests/: conftest.py  router_contracts.py  test_add.py  test_add_weighted.py  test_apply_uint8_lut.py  test_batch_decorator.py  test_ci_change_scope.py  test_flip.py  test_functions.py  test_geometric.py  test_hflip_torchvision.py  test_legal_integrity.py  test_lut.py  test_matmul.py  test_median_blur.py  test_multiply.py  test_multiply_add.py  test_non_square_shape_contracts.py  test_normalize.py  test_normalize_per_image.py  test_power.py  test_stats.py  test_to_float.py  test_to_from_float.py  test_utils.py  test_verification_tools.py  verification_constants.py
tests/golden/: README.md  manifest.json  test_golden_vectors.py
tests/property/: strategies.py  test_arithmetic_properties.py  test_decorator_properties.py  test_geometric_properties.py  test_lut_properties.py  test_shape_dtype_contracts.py  test_stats_properties.py
tools/: __init__.py  check_benchmark_regressions.py  check_router_contracts.py  ci_matrix.py  classify_ci_changes.py  collect_test_environment.py  generate_golden_vectors.py  generate_release_summary.py  golden_vectors.py  resolve_previous_pypi_release.py  run_memory_smoke.py  summarize_benchmarks.py  validate_release_candidate.py  verify_golden_vectors.py  verify_legal_integrity.py  verify_opencv_channel_limits.py  verify_publish_artifacts.py
(+149 files in other folders)
