[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "albucore"
version = "0.2.4"

description = "High-performance image processing functions for deep learning and computer vision."
readme = "README.md"
keywords = [ "deep learning", "image processing" ]
license = "MIT"
license-files = ["LICENSE"]
maintainers = [ { name = "Vladimir Iglovikov" } ]

authors = [ { name = "Vladimir Iglovikov" } ]
requires-python = ">=3.10"

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

dependencies = [
  "numpy>=1.24.4",
  "numkong>=7.4.5",
  "stringzilla>=3.10.4",
]

[project.optional-dependencies]
contrib = ["opencv-contrib-python>=5.0.0.93"]
contrib-headless = ["opencv-contrib-python-headless>=5.0.0.93"]
gui = ["opencv-python>=5.0.0.93"]
headless = ["opencv-python-headless>=5.0.0.93"]

[tool.hatch.build.targets.wheel]
packages = ["albucore"]
include = ["albucore/py.typed"]

[tool.hatch.build.targets.sdist]
exclude = [
  "CLA.md",
  "legal/**",
  "_internal/**",
  "private/**",
  "data/private/**",
  "**/*signature*",
  "**/*signer*",
  "**/*acceptance*record*/**",
  "**/*entity*acceptance*/**",
  "**/*cla*assistant*/**",
  "dist/**",
  "**/*.whl",
  "**/*.tar.gz",
  "tests/**",
  "benchmarks/**",
  "benchmark/**",
  "conda.recipe/**",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
target-version = "py310"

line-length = 120
indent-width = 4

# Assume the minimum supported Python version.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "benchmark",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "setup.py",
  "site",
  "site-packages",
  "tests",
  "benchmarks",
  "venv",
]

format.indent-style = "space"
# Like Black, respect magic trailing commas.
format.quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
lint.select = [ "ALL" ]
lint.ignore = [
  "ANN401",
  "ARG001",
  "D100",
  "D103",
  "D104",
  "EM101",
  "EM102",
  "F403",
  "FBT001",
  "FBT002",
  "FBT003",
  "PLR2004",
  "TRY003",
]

# Allow fix for all enabled rules (when `--fix`) is provided.

lint.explicit-preview-rules = true
lint.fixable = [ "ALL" ]
lint.unfixable = [  ]
# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Like Black, use double quotes for strings.
lint.pydocstyle.convention = "google"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = false
check_untyped_defs = true
no_implicit_reexport = true
disable_error_code = ["type-arg"]

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

# more strict rules
warn_return_any = true
strict_equality = true
warn_unreachable = true

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[dependency-groups]
dev = [
    "hypothesis>=6.155.2",
    "pytest>=9.0.3",
    "pytest-randomly>=4.0.1",
    "tomli>=2.0.1; python_version < '3.11'",
]
